--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Compile Include="User32+InputType.cs" />
     <Compile Include="User32+KEYEVENTF.cs" />
+    <Compile Include="User32+PROCESS_DPI_AWARENESS.cs" />
     <Compile Include="User32+MOUSEEVENTF.cs" />
     <Compile Include="User32+MOUSEINPUT.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
