Enable deterministic compilation

--- a/src/EnlistmentInfo.props
+++ b/src/EnlistmentInfo.props
@@ -25,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
     <NoWarn>CS1591</NoWarn>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Deterministic>true</Deterministic>
 
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)PInvoke.ruleset</CodeAnalysisRuleSet>
 
