Add a few signatures around window messages
With this signatures we can use rc.exe to compile a windows dialog, embed
it as a resource in a .Net executable then load and display it.

There is a working minimal sample in this repository :
https://github.com/vbfox/PInvoke.Forms.Test

--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -22,6 +22,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="User32+DesktopCreationFlags.cs" />
+    <Compile Include="User32+DLGITEMTEMPLATE.cs" />
+    <Compile Include="User32+DLGTEMPLATE.cs" />
     <Compile Include="User32+InputType.cs" />
     <Compile Include="User32+KEYEVENTF.cs" />
     <Compile Include="User32+MOUSEEVENTF.cs" />
@@ -33,7 +35,9 @@
     </Compile>
     <Compile Include="User32+HARDWAREINPUT.cs" />
     <Compile Include="User32+INPUT.cs" />
+    <Compile Include="User32+MSG.cs" />
     <Compile Include="User32+ObjectIinformationFlag.cs" />
+    <Compile Include="User32+PeekMessageRemoveFlags.cs" />
     <Compile Include="User32+QueueStatusFlags.cs" />
     <Compile Include="User32+PeekMessageParams.cs" />
     <Compile Include="User32+SafeDesktopHandle.cs" />
