--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -28,6 +28,8 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kernel32+HeapFreeFlags.cs" />
+    <Compile Include="Kernel32+HeapReAllocFlags.cs" />
     <Compile Include="Kernel32+ACL.cs" />
     <Compile Include="Kernel32+CreateFileFlags.cs" />
     <Compile Include="Kernel32+CreateProcessFlags.cs" />
@@ -35,7 +37,10 @@
     <Compile Include="Kernel32+CreationDisposition.cs" />
     <Compile Include="Kernel32+FileAccess.cs" />
     <Compile Include="Kernel32+FileShare.cs" />
+    <Compile Include="Kernel32+GlobalAllocFlags.cs" />
+    <Compile Include="Kernel32+GlobalReAllocFlags.cs" />
     <Compile Include="Kernel32+GRPICONDIR.cs" />
+    <Compile Include="Kernel32+HeapAllocFlags.cs" />
     <Compile Include="Kernel32+ICONDIR.cs" />
     <Compile Include="Kernel32+ICONDIRENTRY.cs" />
     <Compile Include="Kernel32+GetModuleHandleExFlags.cs" />
