Added EnumResourceLanguages and LoadString. Moved LoadResource and LockResource into Kernel32.Shared.

--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Kernel32+JobObjectExtendedLimitInformation.cs" />
     <Compile Include="Kernel32+JobObjectInfoClass.cs" />
     <Compile Include="Kernel32+JobObjectLimitFlags.cs" />
+    <Compile Include="Kernel32+LANGID.cs" />
     <Compile Include="Kernel32+LoadLibraryExFlags.cs" />
     <Compile Include="Kernel32+LocalReAllocFlags.cs" />
     <Compile Include="Kernel32+LocalAllocFlags.cs" />
