--- a/src/Gdi32.Desktop/Gdi32.Desktop.csproj
+++ b/src/Gdi32.Desktop/Gdi32.Desktop.csproj
@@ -21,6 +21,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Gdi32+DeviceCap.cs" />
+    <Compile Include="Gdi32+StockObjects.cs" />
     <Compile Include="Gdi32.cs" />
     <Compile Include="Gdi32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -42,6 +44,9 @@
     <Content Include="Gdi32.exports.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))\EnlistmentInfo.targets" Condition=" '$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))' != '' " />
