Many fixes and suggestions implemented

--- a/src/Gdi32.Desktop/Gdi32.Desktop.csproj
+++ b/src/Gdi32.Desktop/Gdi32.Desktop.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Gdi32+DeviceCap.cs" />
-    <Compile Include="Gdi32+StockObjects.cs" />
+    <Compile Include="Gdi32+StockObject.cs" />
     <Compile Include="Gdi32.cs" />
     <Compile Include="Gdi32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
