--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -30,19 +30,19 @@
   <ItemGroup>
     <Compile Include="Kernel32+CHAR_INFO_ENCODING.cs" />
     <Compile Include="Kernel32+CHAR_INFO.cs" />
-    <Compile Include="Kernel32+CharacterAttributesFlag.cs" />
+    <Compile Include="Kernel32+CharacterAttributesFlags.cs" />
     <Compile Include="Kernel32+ConsoleSelectionFlags.cs" />
     <Compile Include="Kernel32+CONSOLE_SCREEN_BUFFER_INFO.cs" />
     <Compile Include="Kernel32+CONSOLE_SELECTION_INFO.cs" />
-    <Compile Include="Kernel32+ControlKeyState.cs" />
+    <Compile Include="Kernel32+ControlKeyStates.cs" />
     <Compile Include="Kernel32+FOCUS_EVENT_RECORD.cs" />
     <Compile Include="Kernel32+InputEventTypeFlag.cs" />
     <Compile Include="Kernel32+INPUT_EVENT_RECORD.cs" />
     <Compile Include="Kernel32+INPUT_RECORD.cs" />
     <Compile Include="Kernel32+KEY_EVENT_RECORD.cs" />
     <Compile Include="Kernel32+MENU_EVENT_RECORD.cs" />
-    <Compile Include="Kernel32+MouseButtonState.cs" />
-    <Compile Include="Kernel32+MouseEventFlags.cs" />
+    <Compile Include="Kernel32+MouseButtonStates.cs" />
+    <Compile Include="Kernel32+MouseEvents.cs" />
     <Compile Include="Kernel32+MOUSE_EVENT_RECORD.cs" />
     <Compile Include="Kernel32+ProcessShutdownFlags.cs" />
     <Compile Include="Kernel32+ControlType.cs" />
