--- a/src/WtsApi32.Desktop/WtsApi32.Desktop.csproj
+++ b/src/WtsApi32.Desktop/WtsApi32.Desktop.csproj
@@ -49,6 +49,10 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WtsApi32+WtsSafeMemoryGuard+WtsSafeMemoryGuardIterator.cs" />
+    <Compile Include="WtsApi32+WtsSafeMemoryGuard.cs" />
+    <Compile Include="WtsApi32+WtsConnectStateClass.cs" />
+    <Compile Include="WtsApi32+WTS_SESSION_INFO.cs" />
     <Compile Include="WtsApi32.cs">
       <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
     </Compile>
