--- a/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
+++ b/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AdvApi32+SC_STATUS_TYPE.cs" />
     <Compile Include="AdvApi32+SERVICE_STATUS_PROCESS.cs" />
     <Compile Include="AdvApi32+SERVICE_STATUS_PROCESS_Flags.cs" />
+    <Compile Include="AdvApi32+TOKEN_TYPE.cs" />
     <Compile Include="AdvApi32.RegistryAccessRights.cs" />
     <Compile Include="AdvApi32+ServiceStateQuery.cs" />
     <Compile Include="AdvApi32+ENUM_SERVICE_STATUS.cs" />
