Touch-ups prior to completing PR

--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -84,7 +84,7 @@
     <Compile Include="User32+SafeWindowStationHandle.cs" />
     <Compile Include="User32+SpecialWindowHandles.cs" />
     <Compile Include="User32+SystemParametersInfoAction.cs" />
-    <Compile Include="User32+SPIF.cs" />
+    <Compile Include="User32+SystemParametersInfoFlags.cs" />
     <Compile Include="User32+SysCommands.cs" />
     <Compile Include="User32+SystemMetric.cs" />
     <Compile Include="User32+TextFormats.cs" />
