--- a/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
+++ b/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
@@ -49,6 +49,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvApi32+SafeCryptographicProviderHandle.cs" />
     <Compile Include="AdvApi32+SE_OBJECT_TYPE.cs" />
     <Compile Include="AdvApi32+RegNotifyFilter.cs" />
     <Compile Include="AdvApi32+RegOpenKeyOptions.cs" />
