--- a/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
+++ b/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvApi32+CryptGetProvParamQuery.cs" />
+    <Compile Include="AdvApi32+CryptSetProvParamQuery.cs" />
     <Compile Include="AdvApi32+SafeCryptographicProviderHandle.cs" />
     <Compile Include="AdvApi32+SE_OBJECT_TYPE.cs" />
     <Compile Include="AdvApi32+RegNotifyFilter.cs" />
