--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
 version: 1.0.{build}
 skip_tags: true
-os: Visual Studio 2015
+os: Visual Studio 2017 RC
 configuration: Release
 environment:
-  VisualStudioVersion: 14.0
+  VisualStudioVersion: 15.0
   GeneratePInvokesTxt: true
   TreatWarningsAsErrors: true
 cache:
