--- a/src/nuget.config
+++ b/src/nuget.config
@@ -7,5 +7,6 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="myget.org/F/aarnott" value="https://www.myget.org/F/aarnott/api/v3/index.json" />
     <add key="CodeGeneration.Roslyn CI" value="https://ci.appveyor.com/nuget/codegeneration-roslyn" />
+    <add key="MSBuildSdkExtras CI" value="https://www.myget.org/F/msbuildsdkextras/api/v3/index.json" />
   </packageSources>
 </configuration>
