--- a/src/CodeGeneration/CodeGeneration.csproj
+++ b/src/CodeGeneration/CodeGeneration.csproj
@@ -10,4 +10,5 @@
   <ItemGroup>
     <PackageReference Include="CodeGeneration.Roslyn" Version="0.1.48-alpha-gaa3f482974" PrivateAssets="all" />
   </ItemGroup>
+  <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
