--- a/src/UxTheme/UxTheme.csproj
+++ b/src/UxTheme/UxTheme.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>portable-net4+win8+wpa81;portable-net45+win8+wpa81;net40</TargetFrameworks>
+    <TargetFrameworks>net40</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\User32\User32.csproj" />
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
-    <ProjectReference Include="..\Kernel32\Kernel32.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
