--- a/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
+++ b/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
@@ -3,5 +3,8 @@
     <TargetFrameworks>net40;portable-net4+win8+wpa81;portable-net45+win8+wpa81</TargetFrameworks>
     <AssemblyName>CodeGenerationAttributes</AssemblyName>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CodeGeneration.Roslyn" Version="0.1.57" PrivateAssets="all" />
+  </ItemGroup>
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
